Bugfix: Card touching the sides of screen on mobile

--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -1,14 +1,16 @@
-@use "../abstracts/variables";
-@use "../abstracts/mixins" as mixin;
-@use "./general";
-@use "./reset";
-@use "./font";
+@use '../abstracts/variables';
+@use '../abstracts/mixins' as mixin;
+@use './general';
+@use './reset';
+@use './font';
 
 .order-summary {
   max-width: var(--card-maxwidth);
   background: var(--clr-white);
   box-shadow: 0px 40px 40px -20px rgba(13, 48, 189, 0.151826);
   border-radius: var(--br-primary);
+
+  margin: 1.5rem;
 
   .hero-image {
     width: 100%;
